[gd_scene load_steps=3 format=2]

[ext_resource path="res://net_setup.gd" type="Script" id=1]
[ext_resource path="res://funt.tres" type="DynamicFont" id=2]

[node name="net_setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="conrol_node" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="server" type="Button" parent="conrol_node"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -83.0
margin_right = 168.0
text = "server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" type="Button" parent="conrol_node"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -186.0
margin_top = -85.0
text = "join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="conrol_node"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -131.5
margin_top = 5.0
margin_right = 129.5
margin_bottom = 66.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -78.5
margin_top = -58.0
margin_right = 78.5
text = "xd"

[node name="Label2" type="Label" parent="."]
margin_left = 48.7216
margin_top = 2.66968
margin_right = 88.7216
margin_bottom = 17.6697
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="pressed" from="conrol_node/server" to="." method="_on_server_pressed"]
[connection signal="pressed" from="conrol_node/join" to="." method="_on_join_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
